--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ body {
     transition: all ease 0.5s;
     cursor: pointer;
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     display: none;
 }
 
@@ -439,6 +442,9 @@ body {
     .response {
         display: block;
     }
+    .response-active{
+        left: 0; 
+    }
 }
 
 @media (max-width:540px) {
@@ -510,6 +516,7 @@ body {
         height: 275px;
     }    
     .response {
+        display: block;
         width: 50%;
         padding-right: 0;
         left: -43%;
